crates/hir-ty/tests/snapshots/jls_varargs_fixed_specific__varargs_fixed_specific_body_types.snap
---
source: crates/hir-ty/tests/jls_varargs_fixed_specific.rs
expression: out
---
FILE /src/com/example/Seq.java:
package com.example;

import java.util.function.Function;

class Seq<E> {
    static <T> Seq<T> of(T one) {
        return null;
    }

    @SafeVarargs
    static <T> Seq<T> of(T... many) {
        return null;
    }

    <R> Seq<R> map(Function<? super E, ? extends R> mapper) {
        return null;
    }

    enum Mode {
        ALPHA,
        BETA
    }

    static Seq<String> arrayLocal() {
        String[] values = { "a" };
        return Seq.of(values);
    }

    static Seq<String> newArray() {
        return Seq.of(new String[] { "a" });
    }

    static Seq<String> enumValuesChain() {
        return Seq.of(Mode.values()).map(Mode::name);
    }

    static Seq<Mode> singleElement() {
        return Seq.of(Mode.ALPHA);
    }
}

method of(T): com.example.Seq<T>
  locals: l0: T
  exprs: e0: null
method of(T): com.example.Seq<T>
  locals: l1: T[]
  exprs: e1: null
method map(java.util.function.Function<? super E, ? extends R>): com.example.Seq<R>
  locals: l2: java.util.function.Function<? super E, ? extends R>
  exprs: e2: null
method arrayLocal(): com.example.Seq<java.lang.String>
  locals: l3: java.lang.String[]
  exprs: e3: java.lang.String | e4: java.lang.String[] | e5: java.lang.String[] | e7: com.example.Seq<java.lang.String>
method newArray(): com.example.Seq<java.lang.String>
  locals: 
  exprs: e8: java.lang.String | e9: java.lang.String[] | e11: com.example.Seq<java.lang.String>
method enumValuesChain(): com.example.Seq<java.lang.String>
  locals: 
  exprs: e13: java.util.function.Function<? super com.example.Seq.Mode, ? extends java.lang.String> | e15: com.example.Seq.Mode[] | e17: com.example.Seq<com.example.Seq.Mode> | e18: com.example.Seq<java.lang.String>
method singleElement(): com.example.Seq<com.example.Seq.Mode>
  locals: 
  exprs: e20: com.example.Seq.Mode | e22: com.example.Seq<com.example.Seq.Mode>
